force-app/main/default/objects/Facturacion__c/Facturacion__c.object-meta.xml
<CustomObject>
    <label>Facturación</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Nro de Facturación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>