force-app/main/default/objects/Facturacion__c/fields/ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT__c</fullName>
    <label>Cuenta Contable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>