force-app/main/default/objects/Facturacion__c/fields/ACCOUNTING_DATE__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNTING_DATE__c</fullName>
    <label>Fecha Contable de Factura</label>
    <type>Date</type>
</CustomField>