force-app/main/default/objects/Facturacion__c/fields/ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS__c</fullName>
    <label>Dirección</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>