force-app/main/default/objects/Facturacion__c/fields/BILL_TO_SITE_NUMER__c.field-meta.xml
<CustomField>
    <fullName>BILL_TO_SITE_NUMER__c</fullName>
    <label>Código Id Bill To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>