force-app/main/default/objects/Facturacion__c/fields/CAFF__c.field-meta.xml
<CustomField>
    <fullName>CAFF__c</fullName>
    <label>Venta bruta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>