force-app/main/default/objects/Facturacion__c/fields/CANN__c.field-meta.xml
<CustomField>
    <fullName>CANN__c</fullName>
    <label>Venta neta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>