force-app/main/default/objects/Facturacion__c/fields/CLIENTE_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>CLIENTE_NOMBRE__c</fullName>
    <label>Nombre de Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>