force-app/main/default/objects/Facturacion__c/fields/CLIENTE_NRO__c.field-meta.xml
<CustomField>
    <fullName>CLIENTE_NRO__c</fullName>
    <label>Número de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>