force-app/main/default/objects/Facturacion__c/fields/CODIGO_CANAL_VTA__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_CANAL_VTA__c</fullName>
    <label>Código de canal de venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>