force-app/main/default/objects/Facturacion__c/fields/CODIGO_CLIENTE__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_CLIENTE__c</fullName>
    <label>Código de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>