force-app/main/default/objects/Facturacion__c/fields/CODIGO_SABOR__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_SABOR__c</fullName>
    <label>Cod. Sabor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>