force-app/main/default/objects/Facturacion__c/fields/CODIGO_SKU__c.field-meta.xml
<CustomField>
    <fullName>CODIGO_SKU__c</fullName>
    <label>Articulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>