force-app/main/default/objects/Facturacion__c/fields/CONTEXT__c.field-meta.xml
<CustomField>
    <fullName>CONTEXT__c</fullName>
    <label>Contexto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>