force-app/main/default/objects/Facturacion__c/fields/COST__c.field-meta.xml
<CustomField>
    <fullName>COST__c</fullName>
    <label>Costo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>