force-app/main/default/objects/Facturacion__c/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>