force-app/main/default/objects/Facturacion__c/fields/CREATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>CREATION_DATE__c</fullName>
    <label>Fecha de Creación</label>
    <type>Date</type>
</CustomField>