force-app/main/default/objects/Facturacion__c/fields/CT_REFERENCE__c.field-meta.xml
<CustomField>
    <fullName>CT_REFERENCE__c</fullName>
    <label>Referencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>