force-app/main/default/objects/Facturacion__c/fields/CURRENCY__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY__c</fullName>
    <label>Moneda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>