force-app/main/default/objects/Facturacion__c/fields/CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Clientes__c</referenceTo>
    <relationshipLabel>Facturaciones</relationshipLabel>
    <relationshipName>Facturaciones</relationshipName>
    <type>Lookup</type>
</CustomField>