force-app/main/default/objects/Facturacion__c/fields/DELIVERY_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>DELIVERY_NUMBER__c</fullName>
    <label>Nro de Entrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>