force-app/main/default/objects/Facturacion__c/fields/DESC_CANAL_DIST__c.field-meta.xml
<CustomField>
    <fullName>DESC_CANAL_DIST__c</fullName>
    <label>Descripción canal de distribución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>