force-app/main/default/objects/Facturacion__c/fields/DESC_CANAL_VTA__c.field-meta.xml
<CustomField>
    <fullName>DESC_CANAL_VTA__c</fullName>
    <label>Descripción canal de venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>