force-app/main/default/objects/Facturacion__c/fields/DESC_SABOR__c.field-meta.xml
<CustomField>
    <fullName>DESC_SABOR__c</fullName>
    <label>Descripción de sabor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>