force-app/main/default/objects/Facturacion__c/fields/DESC_SKU__c.field-meta.xml
<CustomField>
    <fullName>DESC_SKU__c</fullName>
    <label>Descripción articulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>