force-app/main/default/objects/Facturacion__c/fields/DIRECCION__c.field-meta.xml
<CustomField>
    <fullName>DIRECCION__c</fullName>
    <label>Dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>