force-app/main/default/objects/Facturacion__c/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <label>Valor Ean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>