force-app/main/default/objects/Facturacion__c/fields/EXCHANGE_RATE__c.field-meta.xml
<CustomField>
    <fullName>EXCHANGE_RATE__c</fullName>
    <label>Tipo de Cambio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>