force-app/main/default/objects/Facturacion__c/fields/FECHA_FACTURA__c.field-meta.xml
<CustomField>
    <fullName>FECHA_FACTURA__c</fullName>
    <label>Fecha Factura</label>
    <type>Date</type>
</CustomField>