force-app/main/default/objects/Facturacion__c/fields/ID_CANAL_DIST__c.field-meta.xml
<CustomField>
    <fullName>ID_CANAL_DIST__c</fullName>
    <label>ID Canal de distribución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>