force-app/main/default/objects/Facturacion__c/fields/ID_CLIENTE__c.field-meta.xml
<CustomField>
    <fullName>ID_CLIENTE__c</fullName>
    <label>Id Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>