force-app/main/default/objects/Facturacion__c/fields/ID_SKU__c.field-meta.xml
<CustomField>
    <fullName>ID_SKU__c</fullName>
    <label>Item distribuidor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>