force-app/main/default/objects/Facturacion__c/fields/ID_TIE_MES__c.field-meta.xml
<CustomField>
    <fullName>ID_TIE_MES__c</fullName>
    <label>ID_TIE_MES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>