force-app/main/default/objects/Facturacion__c/fields/ITEM_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>ITEM_DESCRIPTION__c</fullName>
    <label>Item Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>