force-app/main/default/objects/Facturacion__c/fields/LAST_UPDATE_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPDATE_DATE__c</fullName>
    <label>Fecha de Actualización</label>
    <type>Date</type>
</CustomField>