force-app/main/default/objects/Facturacion__c/fields/LINE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>LINE_NUMBER__c</fullName>
    <label>Línea Factura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>