force-app/main/default/objects/Facturacion__c/fields/LIST_PRICE__c.field-meta.xml
<CustomField>
    <fullName>LIST_PRICE__c</fullName>
    <label>Precio Lista SUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>