force-app/main/default/objects/Facturacion__c/fields/NRO_COMPROBANTE__c.field-meta.xml
<CustomField>
    <fullName>NRO_COMPROBANTE__c</fullName>
    <label>Nro. de Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>