force-app/main/default/objects/Facturacion__c/fields/OPERATION_UNIT__c.field-meta.xml
<CustomField>
    <fullName>OPERATION_UNIT__c</fullName>
    <label>Unidad Operativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>