force-app/main/default/objects/Facturacion__c/fields/PACIENTE__c.field-meta.xml
<CustomField>
    <fullName>PACIENTE__c</fullName>
    <label>Paciente (Campo Destinatario)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>