force-app/main/default/objects/Facturacion__c/fields/PROVINCE__c.field-meta.xml
<CustomField>
    <fullName>PROVINCE__c</fullName>
    <label>Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>