force-app/main/default/objects/Facturacion__c/fields/PURCHASE_ORDER__c.field-meta.xml
<CustomField>
    <fullName>PURCHASE_ORDER__c</fullName>
    <label>Nro. de OC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>