force-app/main/default/objects/Facturacion__c/fields/QTY_LITERS__c.field-meta.xml
<CustomField>
    <fullName>QTY_LITERS__c</fullName>
    <label>Cantidad en Litros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>