force-app/main/default/objects/Facturacion__c/fields/RELATED_INVOICE__c.field-meta.xml
<CustomField>
    <fullName>RELATED_INVOICE__c</fullName>
    <label>FC Relacionada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>