force-app/main/default/objects/Facturacion__c/fields/RELATED_SKU__c.field-meta.xml
<CustomField>
    <fullName>RELATED_SKU__c</fullName>
    <label>SKU Relacionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>