force-app/main/default/objects/Facturacion__c/fields/SALES_REVERSION__c.field-meta.xml
<CustomField>
    <fullName>SALES_REVERSION__c</fullName>
    <label>Reversión de Ventas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>