force-app/main/default/objects/Facturacion__c/fields/SELLING_PRICE__c.field-meta.xml
<CustomField>
    <fullName>SELLING_PRICE__c</fullName>
    <label>Precio Venta SUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>