force-app/main/default/objects/Facturacion__c/fields/SELLING_QTY__c.field-meta.xml
<CustomField>
    <fullName>SELLING_QTY__c</fullName>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>