force-app/main/default/objects/Facturacion__c/fields/SHIP_TO_SITE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SHIP_TO_SITE_NUMBER__c</fullName>
    <label>Código Ship To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>