force-app/main/default/objects/Facturacion__c/fields/TERRITORY__c.field-meta.xml
<CustomField>
    <fullName>TERRITORY__c</fullName>
    <label>Zona</label>
    <length>255</length>
    <type>Text</type>
</CustomField>