force-app/main/default/objects/Facturacion__c/fields/TIPO_COMPROBANTE__c.field-meta.xml
<CustomField>
    <fullName>TIPO_COMPROBANTE__c</fullName>
    <label>Tipo de Comprobante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>