force-app/main/default/objects/Facturacion__c/fields/TOTAL_INVOICED__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_INVOICED__c</fullName>
    <label>Importe Facturado SUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>