force-app/main/default/objects/Facturacion__c/fields/UNIDADES__c.field-meta.xml
<CustomField>
    <fullName>UNIDADES__c</fullName>
    <label>Unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>