force-app/main/default/objects/Facturacion__c/fields/UOM_CODE__c.field-meta.xml
<CustomField>
    <fullName>UOM_CODE__c</fullName>
    <label>UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>