force-app/main/default/objects/Facturacion__c/fields/VTA_NETA_KILOS__c.field-meta.xml
<CustomField>
    <fullName>VTA_NETA_KILOS__c</fullName>
    <label>Venta neta kilos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>