force-app/main/default/objects/Facturacion__c/fields/WAYBILL__c.field-meta.xml
<CustomField>
    <fullName>WAYBILL__c</fullName>
    <label>Remito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>