force-app/main/default/objects/Facturacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CANN__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Todos</label>
</ListView>